# data_analyst_env

data_analyst_env/: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_inference.py
data_analyst_env/server/: Dockerfile  app.py  environment.py
