[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analyst_env"
version = "0.1.0"
description = "Data Analyst environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai"
]

# ADD THIS SECTION: This fixed the "Missing [project.scripts]" error
[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]